added to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -17202,3 +17202,8 @@ World-Model/images/state_5597.png
 World-Model/images/state_5598.png
 World-Model/images/state_5599.png
 World-Model/images/state_5600.png
+runs/imitation_policy/model_final.pth
+.gitignore
+runs/transition_model/model_final.pth
+World-Model/pendulum_dataset.csv
+Ref-policy/pendulum_dataset_controller.csv
